add live search and sort by latest (add button later)

--- a/index.html
+++ b/index.html
@@ -1,39 +1,63 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Uhh Yeah Notes</title>
+</head>
 <body>
+
 <h2>Notes</h2>
+
+<input autocomplete="off" type="search" id="search" placeholder="search title or notes"/>
 
 <div id="table"></div>
 
 <script>
+// get data
 var rawFile = new XMLHttpRequest();
 rawFile.open("GET", "data.json", false);
 rawFile.send(null);
 
 var allText = rawFile.responseText;
 var parsed = JSON.parse(allText);
+parsed.sort(function(a, b) {return b.Episode - a.Episode});
 
-
-// Get the amount of objects inside 'watson_tone' so we can loop through each one.
-var count = Object.keys(parsed).length;
-
-// Make some strings to include in our output.
+// set up table html
 var tableHeader = "<table><tr><th>Episode</th><th>Date</th><th>Title</th><th>Note</th></tr>";
 var tableContent = "";
-
-// Loop through the JSON and output each row in to a string.
-for(i = 0; i < count; i++) {
-    tableContent = tableContent + "<tr><td>" + parsed[i].Episode 
-                                + "</td><td>" + parsed[i].Date 
-                                + "</td><td>" + parsed[i].Title 
-                                + "</td><td>" + parsed[i].Note 
-                                + "</td></tr>";
-}
-
 var tableFooter = "</table>";
 
-// Get div and output the HTML. You can include these HTML strings straight in to your emailText variable.
-document.getElementById("table").innerHTML = tableHeader + tableContent + tableFooter;
+// search
+const search = document.getElementById("search");
+let search_term = "";
+
+const showList = () => {
+  document.innerHTML = "";
+  tableContent = "";
+  parsed
+    .filter((item) => {
+      return (
+        item.Title.toLowerCase().includes(search_term) ||
+        item.Note.toLowerCase().includes(search_term)
+      );
+    })
+    .forEach((e) => {
+        // Loop through the JSON and output each row in to a string.
+            tableContent = tableContent + "<tr><td>" + e.Episode 
+                                        + "</td><td>" + e.Date 
+                                        + "</td><td>" + e.Title 
+                                        + "</td><td>" + e.Note 
+                                        + "</td></tr>";
+    });
+    document.getElementById("table").innerHTML = tableHeader + tableContent + tableFooter;
+};
+
+showList();
+
+search.addEventListener("input", (event) => {
+  search_term = event.target.value.toLowerCase();
+  showList();
+});
+
 </script>
 </body>
 
