--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@ showList();
 search.addEventListener("input", (event) => {
   search_term = event.target.value.toLowerCase();
   urlParams.set('q', search_term);
-  history.pushState(null, null, "?"+urlParams.toString());
+  history.replaceState({}, "Uhh Yeah Notes Search", "?"+urlParams.toString());
   if (search_term == null || search_term == "")
   {
-    history.pushState(null, null, "/");
+    history.replaceState({}, "Uhh Yeah Notes Search", "/");
   }
   showList();
 });
