--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Uhh Yeah Notes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=0.75">
+
 </head>
 <body>
 
