--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <title>Uhh Yeah Notes</title>
     <meta name="viewport" content="width=device-width, initial-scale=0.75">
-
 </head>
 <body>
 
 <h2><a href="/">Notes</a></h2>
 
 <input autocomplete="off" type="search" id="search" placeholder="search title or notes"/>
-
+<br><br>
+<a href="javascript:void(0)" id="search_order" onclick="changeorder()">Latest</a>
+<br><br>
 <div id="table"></div>
 
 <script>
@@ -24,7 +25,7 @@ var parsed = JSON.parse(allText);
 parsed.sort(function(a, b) {return b.Episode - a.Episode});
 
 // set up table html
-var tableHeader = "<table><tr><th>Episode</th><th>Date</th><th>Title/Note</th></tr>";
+var tableHeader = "<table border=1 frame=void rules=rows><tr><th>Episode</th><th>Date</th><th>Title/Note</th></tr>";
 var tableContent = "";
 var tableFooter = "</table>";
 
@@ -48,7 +49,7 @@ const showList = () => {
   document.innerHTML = "";
   tableContent = "";
   re = new RegExp(search_term, 'g');
-  if (search_term != "")
+  if (search_term != "" && search_term.length > 2)
   {
     parsed
       .filter((item) => {
@@ -58,9 +59,10 @@ const showList = () => {
         );
       })
       .forEach((e) => {
+        var link = "<a target='_blank' href='https://uhhyeahdude.com/index.php/show_notes/episode_" + e.Episode + "''>";
           // Loop through the JSON and output each row in to a string.
-              tableContent = tableContent + "<tr><td>" + e.Episode 
-                                          + "</td><td>" + e.Date 
+              tableContent = tableContent + "<tr><td>" + link + e.Episode
+                                          + "</a></td><td>" + e.Date 
                                           + "</td><td><b>" + highlight(e.Title, search_term)
                                           + "</b><br>" + highlight(e.Note, search_term)
                                           + "<br><br></td></tr>";
@@ -70,9 +72,10 @@ const showList = () => {
   {
     parsed
       .forEach((e) => {
+        var link = "<a target='_blank' href='https://uhhyeahdude.com/index.php/show_notes/episode_" + e.Episode + "''>";
           // Loop through the JSON and output each row in to a string.
-              tableContent = tableContent + "<tr><td>" + e.Episode 
-                                          + "</td><td>" + e.Date 
+              tableContent = tableContent + "<tr><td>" + link + e.Episode
+                                          + "</a></td><td>" + e.Date 
                                           + "</td><td><b>" + e.Title
                                           + "</b><br>" + e.Note
                                           + "<br><br></td></tr>";
@@ -97,6 +100,22 @@ search.addEventListener("input", (event) => {
 function highlight(str, find) {
   var reg = new RegExp(find, 'gi');
   return str.replace(reg, '<mark>$&</mark>');
+}
+
+function changeorder() {
+  var current = document.getElementById("search_order").innerHTML;
+  if (current == "Latest")
+  {
+    parsed.sort(function(a, b) {return a.Episode - b.Episode});
+    document.getElementById("search_order").innerHTML = "Earliest";
+  }
+  else
+  {
+    parsed.sort(function(a, b) {return b.Episode - a.Episode});
+    document.getElementById("search_order").innerHTML = "Latest";
+  }
+
+  showList();
 }
 
 </script>
