--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Uhh Yeah Notes</title>
     <meta name="viewport" content="width=device-width, initial-scale=0.75">
     <style>
-            h2 {text-align: center;}
+            h1 {text-align: center;}
       input {display: block; margin:auto;}
 * {
   box-sizing: border-box;
@@ -39,23 +39,32 @@
   clear: both;
 }
 
+/* Solid border */
+hr.solid {
+  border-top: 3px solid rgb(9, 8, 8);
+}
+
+mark { 
+  background-color:thistle;
+}
+
 @media screen and (max-width: 600px) {
   .column {
     width: 100%;
   }
 }
-      </style>
+</style>
 </head>
-<body>
+<body style="background-color:mintcream">
 
-<h2><a href="/">Notes</a></h2>
+<h1><a href="/" style='color:sienna; text-decoration-color:darkred;'>Uhh Yeah Notes</a></h1>
 
 <input autocomplete="off" 
         type="search" id="search" 
         placeholder="search title or notes"
-        style="font-size: 20px"/>
+        style="font-size: 20px; background-color:mintcream"/>
 <br><br>
-<a href="javascript:void(0)" id="search_order" style="margin: 10px;" onclick="changeorder()">Latest</a>
+<a href="javascript:void(0)" id="search_order" style="margin: 10px; color:teal" onclick="changeorder()">Latest</a>
 <br><br>
 <div id="table" style="font-size: 18px"></div>
 
@@ -107,24 +116,24 @@ const showList = () => {
         );
       })
       .forEach((e) => {
-        var link = "<a target='_blank' href='https://uhhyeahdude.com/index.php/show_notes/episode_" + e.Episode + "''>";
+        var link = "<a target='_blank' style='color:black' href='https://uhhyeahdude.com/index.php/show_notes/episode_" + e.Episode + "''>";
           // Loop through the JSON and output each row in to a string.
-          tableContent = tableContent + "<div class='column left'>" + link + e.Episode + "</a></div>"
+          tableContent = tableContent + "<hr class='solid'><div class='column left'>" + link + e.Episode + "</a></div>"
                                       + "<div class='column center'>" + e.Date + "</div>"
-                                      + "<div class='column right'><b>" + highlight(e.Title, search_term) 
-                                      + "</b><br><br>" + highlight(e.Note, search_term) + "</div>"
+                                      + "<div class='column right' style='background-color:bisque'><b>" + highlight(e.Title, search_term) 
+                                      + "</b><br><br>" + highlight(e.Note, search_term) + "<br><br></div></hr>"
       });
   }
   else 
   {
     parsed
       .forEach((e) => {
-        var link = "<a target='_blank' href='https://uhhyeahdude.com/index.php/show_notes/episode_" + e.Episode + "''>";
+        var link = "<a target='_blank' style='color:black' href='https://uhhyeahdude.com/index.php/show_notes/episode_" + e.Episode + "''>";
           // Loop through the JSON and output each row in to a string.
-          tableContent = tableContent + "<div class='column left'>" + link + e.Episode + "</a></div>"
+          tableContent = tableContent + "<hr class='solid'><div class='column left'>" + link + e.Episode + "</a></div>"
                                       + "<div class='column center'>" + e.Date + "</div>"
-                                      + "<div class='column right'><b>" + e.Title 
-                                      + "</b><br><br>" + e.Note + "</div>"
+                                      + "<div class='column right' style='background-color:bisque'><b>" + e.Title 
+                                      + "</b><br><br>" + e.Note + "<br><br></div></hr>"
     });
   }
     document.getElementById("table").innerHTML = secondheader + tableContent + closer;
