--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Uhh Yeah Notes</title>
-    <meta name="viewport" content="width=device-width, initial-scale=0.75">
+    <meta name="viewport" content="width=device-width, initial-scale=0.75, maximum-scale=1">
     <style>
             h1 {text-align: center;}
       input {display: block; margin:auto;}
@@ -57,14 +57,14 @@ mark {
 </head>
 <body style="background-color:mintcream">
 
-<h1><a href="/" style='color:sienna; text-decoration-color:darkred;'>Uhh Yeah Notes</a></h1>
-
+<h1><a href="/" style='color:slateblue; text-decoration-color:slateblue;'>Uhh Yeah Notes</a></h1>
+<br><br>
 <input autocomplete="off" 
         type="search" id="search" 
         placeholder="search title or notes"
-        style="font-size: 20px; background-color:mintcream"/>
+        style="font-size: 22px; background-color:mintcream; color:slateblue"/>
 <br><br>
-<a href="javascript:void(0)" id="search_order" style="margin: 10px; color:teal" onclick="changeorder()">Latest</a>
+<a href="javascript:void(0)" id="search_order" style="margin: 10px; color:black;" onclick="changeorder()">Latest</a>
 <br><br>
 <div id="table" style="font-size: 18px"></div>
 
