dont do performance stuff until later

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       document.innerHTML = "";
       content = "";
       re = new RegExp(search_term, 'g');
-      if (search_term != "" && search_term.length > 2) {
+      if (search_term != "") {
         parsed
           .filter((item) => {
             return (
