--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 
     .right {
       width: 80%;
+      background-color:#f9c1d9;
+      margin-bottom: 15px;
     }
 
     .row:after {
@@ -126,10 +128,12 @@
     });  
     
     // filter list and highlight if search term, otherwise show entire list
+    var mark = '<mark>$&</mark>';
     const showList = () => {
       document.innerHTML = "";
       content = "";
-      re = new RegExp(search_term, 'g');
+      var baselink = "<a target='_blank' style='color:black' href='https://uhhyeahdude.com/index.php/show_notes/episode_";
+      var reg = new RegExp(search_term, 'gi');
       if (search_term != "") {
         parsed
           .filter((item) => {
@@ -139,32 +143,25 @@
             );
           })
           .forEach((e) => {
-            var link = "<a target='_blank' style='color:black' href='https://uhhyeahdude.com/index.php/show_notes/episode_" + e.Episode + "''>";
-            // Loop through the JSON and output each row in to a string.
-            content = content + "<hr class='solid'><div class='column left'>" + link + e.Episode + "</a></div>"
-              + "<div class='column center'>" + e.Date + "</div>"
-              + "<div class='column right' style='background-color:#f9c1d9'><b>" + highlight(e.Title, search_term)
-              + "</b><br><br>" + highlight(e.Note, search_term) + "<br><br></div></hr>"
+            content = content + createrow(baselink + e.Episode + "''>" + e.Episode + "</a>", e.Date, e.Title.replace(reg, mark), e.Note.replace(reg, mark))
           });
       }
       else {
         parsed
           .forEach((e) => {
-            var link = "<a target='_blank' style='color:black' href='https://uhhyeahdude.com/index.php/show_notes/episode_" + e.Episode + "''>";
-            // Loop through the JSON and output each row in to a string.
-            content = content + "<hr class='solid'><div class='column left'>" + link + e.Episode + "</a></div>"
-              + "<div class='column center'>" + e.Date + "</div>"
-              + "<div class='column right' style='background-color:#f9c1d9; margin-bottom:15px'><b>" + e.Title
-              + "</b><br><br>" + e.Note + "<br><br></div></hr>"
+            content = content + createrow(baselink + e.Episode + "''>" + e.Episode + "</a>", e.Date, e.Title, e.Note)
           });
       }
       document.getElementById("table").innerHTML = header + content + closer;
     };
 
-    // highlight search term
-    function highlight(str, find) {
-      var reg = new RegExp(find, 'gi');
-      return str.replace(reg, '<mark>$&</mark>');
+    // create row from data
+    function createrow(ep, date, title, note){
+      return "<hr class='solid'><div class='column left'>" + ep + "</div>"
+              + "<div class='column center'>" + date + "</div>"
+              + "<div class='column right'><b>" + title
+              + "</b><br><br>" + note 
+              + "<br><br></div></hr>"
     }
 
     // change the sort order
