--- a/index.html
+++ b/index.html
@@ -81,15 +81,23 @@
       font-size: 20px;
     }
 
+    .margins {
+      margin: 4em;
+    }
+
     @media screen and (max-width: 600px) {
       .column {
         width: 100%;
+      }
+
+      .margins {
+        margin:1em;
       }
     }
   </style>
 </head>
 
-<body class="background">
+<body class="background margins">
 
   <h1 class="title"><a href="/" class="homelink titlecolor">Uhh Yeah Notes</a></h1>
   <br>
